# millipede

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codecov.yml  deny.toml
.cargo/: config.toml
.github/workflows/: bench-compare.yml  ci.yml  nightly-audit.yml  website.yml
benchmarks/: PLAN.md
benchmarks/crawlee-bench/: README.md  package-lock.json  package.json  runner.mjs  runner.test.mjs  sea_hash.mjs  sea_hash.test.mjs
benchmarks/gocolly-bench/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go
benchmarks/spider-bench/: Cargo.toml  README.md  deny.toml
benchmarks/spider-bench/src/: main.rs  measure.rs  report.rs  scenario.rs  server.rs
benchmarks/spider-bench/src/engines/: baseline.rs  millipede.rs  mod.rs  spider.rs
benchmarks/spider-bench/src/scenarios/: books.rs  compressed.rs  hn.rs  latency.rs  mesh.rs  mod.rs  payload.rs  redirects.rs  tree.rs  wide.rs
crates/millipede-browser/: Cargo.toml  README.md
crates/millipede-browser-chromiumoxide/: Cargo.toml  README.md
crates/millipede-browser-chromiumoxide/src/: cookie.rs  discovery.rs  launch.rs  lib.rs  page.rs  provider.rs
crates/millipede-browser-chromiumoxide/tests/: browser_crawler_e2e.rs  provider_integration.rs  smoke.rs  spike.rs
crates/millipede-browser/src/: detect.rs  error.rs  hooks.rs  kind.rs  lib.rs  nav.rs  page.rs  pool.rs  provider.rs  smart.rs
crates/millipede-browser/tests/: kind.rs  pool.rs  smart.rs  smoke.rs  surface.rs
crates/millipede-core/: Cargo.toml  README.md
crates/millipede-core/benches/: engine_overhead.rs
crates/millipede-core/public-api/: millipede_core.json
crates/millipede-core/src/: antibot.rs  config.rs  cookies.rs  enqueue.rs  errors.rs  events.rs  handler.rs  http_client.rs  lib.rs  link_extraction.rs  proxy.rs  request.rs  retry_strategy.rs  router.rs  session.rs  snapshot.rs  statistics.rs  util.rs
crates/millipede-core/src/autoscale/: aimd.rs  mod.rs  pool.rs  rate_limit.rs  signal.rs  signals.rs  snapshotter.rs  system_status.rs
crates/millipede-core/src/crawler/: basic.rs  builder.rs  engine.rs  mod.rs  start.rs
crates/millipede-core/src/sitemap/: mod.rs  parser.rs  tandem.rs
crates/millipede-core/src/storage/: auto_saved.rs  dataset.rs  handle.rs  kvs.rs  mod.rs  queue.rs  rate_limit.rs
crates/millipede-core/tests/: antibot.rs  auto_saved.rs  autoscale.rs  autoscale_engine.rs  cookies.rs  crawl_policy.rs  crawler_run.rs  enqueue.rs  http_client.rs  link_extraction.rs  object_safety.rs  proxy.rs  rate_limit_signal.rs  request_roundtrip.rs  retry_strategy.rs  router.rs  session.rs  shutdown_spike.rs  sitemap.rs  sitemap_tandem.rs  smoke.rs  start_requests.rs  storage_handle.rs  unique_key_prop.rs
crates/millipede-core/tests/fixtures/antibot/: akamai.html  benign_contentful.html  benign_forbidden.html  cloudflare.html  datadome.html  imperva.html  kasada.html  perimeterx.html  unknown.html
crates/millipede-fingerprint/: Cargo.toml  README.md
crates/millipede-fingerprint/data/: header_profiles.json
crates/millipede-fingerprint/src/: browser_fingerprint.rs  header_generator.rs  lib.rs
crates/millipede-fingerprint/tests/: smoke.rs
crates/millipede-html/: Cargo.toml  README.md
crates/millipede-html/benches/: link_extraction.rs  selector_bench.rs
crates/millipede-html/src/: extract.rs  kind.rs  lib.rs  selectors.rs
crates/millipede-html/tests/: enqueue_links.rs  html_crawler.rs  router_html.rs  smoke.rs
crates/millipede-http/: Cargo.toml  README.md
crates/millipede-http/src/: client.rs  coalesce.rs  kind.rs  lib.rs  nav.rs
crates/millipede-http/tests/: coalesce.rs  http_crawler.rs  lock_progress.rs  reqwest_client.rs  router_http.rs  smoke.rs
crates/millipede-storage-fs/: Cargo.toml  LICENSE-MIT  README.md
crates/millipede-storage-fs/src/: client.rs  dataset.rs  kvs.rs  layout.rs  lib.rs  queue.rs
crates/millipede-storage-fs/tests/: client.rs  crash_recovery.rs  dataset.rs  kvs.rs  queue.rs  smoke.rs
crates/millipede-storage-memory/: Cargo.toml  README.md
crates/millipede-storage-memory/benches/: queue_ops.rs
crates/millipede-storage-memory/public-api/: millipede_storage_memory.json
crates/millipede-storage-memory/src/: client.rs  dataset.rs  kvs.rs  lib.rs  policy.rs  queue.rs
crates/millipede-storage-memory/tests/: auto_saved.rs  client.rs  dataset.rs  kvs.rs  queue.rs  queue_concurrency.rs  smoke.rs  statistics_persist.rs
docs/: CONTRIBUTING.md  INTERFACE.md  RELEASE.md  ROADMAP.md  announcement-0.1.0.md  benchmarks-vs-crawlers.md  benchmarks-vs-spider.md  benchmarks.md  tracked-issues.md
docs/api-baselines/: README.md  millipede-browser-chromiumoxide.txt  millipede-browser.txt  millipede-core.txt  millipede-fingerprint.txt  millipede-html.txt  millipede-http.txt  millipede-storage-fs.txt  millipede-storage-memory.txt  millipede.txt
docs/decisions/: ADR-0001-msrv-and-async-traits.md  ADR-0002-cookie-jar.md  ADR-0003-lessons-from-spider-rs.md  ADR-0004-engine-shutdown-joinset-vs-futuresunordered.md  ADR-0005-selector-ergonomics-and-link-extraction.md  ADR-0006-chromiumoxide.md  ADR-0007-api-conventions.md  ADR-0008-crawlee-docs-ia-audit.md
docs/guide/: README.md  autoscaler.md  crawlee-storage-migration.md  error-handling.md  extras.md  fingerprinting.md  getting-started.md  migrating-from-crawlee.md  request-storage.md  sessions-and-proxies.md
examples/: basic_engine.rs  browser_crawl.rs  fingerprint_crawl.rs  http_crawl.rs  phase1_queue_demo.rs  scrape_books.rs  smart_crawl.rs
millipede/: Cargo.toml  README.md
millipede/examples/: autoscale_demo.rs  basic.rs  basic_engine.rs  browser_crawl.rs  error_handling.rs  fingerprint_crawl.rs  hackernews.rs  phase0_hello.rs  proxy_switcher.rs  rate_limit.rs
millipede/src/: lib.rs
millipede/tests/: hackernews_mock.rs  scrape_books_live.rs  scrape_books_mock.rs  smoke.rs
scripts/: semver-baseline.sh  sync-snippets.mjs  validate-templates.sh
templates/: README.md
templates/basic-html/: Cargo.toml  README.md
templates/basic-html/src/: main.rs
website/: next.config.mjs  package.json  pnpm-lock.yaml
website/app/: global.css  (+1 more)
(+84 files in other folders)
