[workspace]
resolver = "3"
members = ["crates/*", "millipede"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/satvik007/millipede"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
url = { version = "2", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "formatting", "parsing"] }
http = "1"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
proptest = "1"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
