[workspace]
resolver = "3"
members = ["crates/*", "millipede"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/satvik007/millipede"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
url = { version = "2", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "formatting", "parsing"] }
http = "1"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
cookie_store = { version = "0.21", features = ["serde_json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json", "stream"] }
wiremock = "=0.6.4"
console-subscriber = "0.4"
proptest = "1"
tempfile = "3"
sysinfo = { version = "0.36", default-features = false, features = ["system"] }
globset = "0.4"
regex = "1"
psl = "2"
quick-xml = "0.37"
flate2 = "1"
scraper = { version = "0.24", features = ["atomic"] }
criterion = "0.5"
lol_html = "=2.8.1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }

[workspace.lints.clippy]
await_holding_lock = "deny"
