[package]
name = "millipede"
description = "An idiomatic Rust web-crawling library inspired by Crawlee. Umbrella crate re-exporting the Millipede workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
millipede-core = { path = "../crates/millipede-core", version = "0.1.0" }
millipede-storage-memory = { path = "../crates/millipede-storage-memory", version = "0.1.0", optional = true }
millipede-storage-fs = { path = "../crates/millipede-storage-fs", version = "0.1.0", optional = true }
millipede-http = { path = "../crates/millipede-http", version = "0.1.0", optional = true }
millipede-html = { path = "../crates/millipede-html", version = "0.1.0", optional = true }
millipede-browser = { path = "../crates/millipede-browser", version = "0.1.0", optional = true }
millipede-browser-chromiumoxide = { path = "../crates/millipede-browser-chromiumoxide", version = "0.1.0", optional = true }
millipede-fingerprint = { path = "../crates/millipede-fingerprint", version = "0.1.0", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
millipede-storage-fs = { path = "../crates/millipede-storage-fs" }
tempfile = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[features]
default = ["http", "html", "storage-memory"]
http = ["dep:millipede-http"]
html = ["dep:millipede-html"]
storage-memory = ["dep:millipede-storage-memory"]
storage-fs = ["dep:millipede-storage-fs"]
browser = ["dep:millipede-browser"]
browser-chromiumoxide = ["dep:millipede-browser-chromiumoxide", "browser"]
fingerprint = ["dep:millipede-fingerprint"]

[[example]]
name = "phase0_hello"
path = "../examples/phase0_hello.rs"

[[example]]
name = "phase1_queue_demo"
path = "../examples/phase1_queue_demo.rs"
required-features = ["storage-memory"]

[[example]]
name = "basic_engine"
path = "../examples/basic_engine.rs"
required-features = ["storage-memory"]

[[example]]
name = "http_crawl"
path = "../examples/http_crawl.rs"
required-features = ["http", "storage-memory"]

[[example]]
name = "autoscale_demo"
path = "../examples/autoscale_demo.rs"
required-features = ["http", "storage-memory"]

[[example]]
name = "scrape_books"
path = "../examples/scrape_books.rs"
required-features = ["http", "html", "storage-fs"]

[[example]]
name = "browser_crawl"
path = "../examples/browser_crawl.rs"
required-features = ["browser-chromiumoxide", "storage-memory"]

[[example]]
name = "smart_crawl"
path = "../examples/smart_crawl.rs"
required-features = ["browser-chromiumoxide", "html", "storage-memory"]

[[example]]
name = "fingerprint_crawl"
path = "../examples/fingerprint_crawl.rs"
required-features = ["http", "fingerprint", "storage-memory"]
