[package]
name = "millipede-browser-chromiumoxide"
description = "Chromium CDP browser provider for the Millipede web crawler, via chromiumoxide."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["crawler", "chromium", "cdp", "headless"]
categories = ["web-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
millipede-core = { path = "../millipede-core", version = "0.1.0" }
millipede-browser = { path = "../millipede-browser", version = "0.1.0" }
chromiumoxide = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
time = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
millipede-storage-memory = { path = "../millipede-storage-memory" }
