[package]
name = "millipede-browser"
description = "BrowserCrawler core, BrowserProvider trait, and BrowserPool for the Millipede web crawler."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
millipede-core = { path = "../millipede-core", version = "0.1.0" }
millipede-http = { path = "../millipede-http", version = "0.1.0" }
millipede-html = { path = "../millipede-html", version = "0.1.0" }
async-trait.workspace = true
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true
http.workspace = true
serde_json.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
millipede-storage-memory = { path = "../millipede-storage-memory" }
wiremock.workspace = true
