[package]
name = "millipede-core"
description = "Core primitives for the Millipede web crawler: request model, storage traits, events, errors, configuration."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
time = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
