[package]
name = "millipede-fingerprint"
description = "Browser-like header generation and fingerprint hooks for the Millipede web crawler."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
