[package]
name = "millipede-html"
description = "HtmlCrawler for the Millipede web crawler: HTML parsing via scraper."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["crawler", "html", "scraper", "css-selector"]
categories = ["web-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
millipede-core = { path = "../millipede-core", version = "0.1.0" }
millipede-http = { path = "../millipede-http", version = "0.1.0" }
scraper = { workspace = true }
url = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
serde_json = { workspace = true }
millipede-storage-memory = { path = "../millipede-storage-memory" }
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true, features = ["async_tokio"] }
lol_html = { workspace = true }

[[bench]]
name = "selector_bench"
harness = false

[[bench]]
name = "link_extraction"
harness = false
