[package]
name = "millipede-http"
description = "HttpCrawler for the Millipede web crawler: reqwest-based HTTP fetching."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
millipede-core = { path = "../millipede-core", version = "0.1.0" }
millipede-fingerprint = { path = "../millipede-fingerprint", version = "0.1.0" }
reqwest = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
serde_json = { workspace = true }
console-subscriber = { workspace = true }
millipede-storage-memory = { path = "../millipede-storage-memory" }
