[package]
name = "millipede-storage-fs"
description = "File-system StorageClient implementation for the Millipede web crawler."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["crawler", "storage", "crawlee", "queue"]
categories = ["web-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
millipede-core = { path = "../millipede-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
