[package]
name = "millipede-storage-memory"
description = "In-memory StorageClient implementation for the Millipede web crawler."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true
