[package]
name = "millipede-storage-memory"
description = "In-memory StorageClient implementation for the Millipede web crawler."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
millipede-core = { path = "../millipede-core", version = "0.1.0" }
async-trait = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
serde = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "queue_ops"
harness = false
